# cmake-example

./: .gitignore  CMakeLists.txt
include/: header.h
lib/: header.c
src/: main.c
